--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -7,6 +7,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-image: url('fundo.png');
 }
 
 i{
